[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/EntraTemplo.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://imagens/Fontes/Bebas-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://cenas/FadeIn/FadeIn.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 121.421, 146.759 )

[sub_resource type="DynamicFont" id=2]
size = 48
use_filter = true
extra_spacing_top = -15
font_data = ExtResource( 3 )

[node name="EntraTemplo" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -72.5226
margin_top = -137.457
margin_right = 74.4774
margin_bottom = -18.4573
custom_fonts/font = SubResource( 2 )
text = "Entrar
Aperte E"
align = 1
percent_visible = 0.0

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
[connection signal="body_entered" from="." to="." method="_on_EntraTemplo_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_EntraTemplo_body_exited"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
